# libsimplennet

./: .gitignore  CMakeLists.txt  README.md  libSimpleNNet.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
bindings/java/: jni_bridge.cpp
bindings/python/: native_module.cpp
docs/: api.md  architecture.md  cpp.md  examples.md  index.html  index.md  installation.md  java-go.md  overview.md  styles.css  types.md  user-guide.md
docs/website/: index.html
examples/: category_prediction.py  cpp_quickstart.cpp  float_prediction.py  int_prediction.py
go/: go.mod
go/simplennet/: native_other.go  native_windows_test.go  predictor.go
include/simplennet/: c_api.h  simple_predictor.hpp
java/: pom.xml
java/src/main/java/ai/simplennet/: OutputType.java  SimplePredictor.java
java/src/test/java/ai/simplennet/: SmokeTest.java
src/: libSimpleNNet.py
src/cpp/: c_api.cpp  simple_predictor.cpp
src/simplennet/: __init__.py  encoding.py  legacy.py  predictor.py
tests/: test_imports.py  test_normalization.py  test_predictor.py
tests/cpp/: test_core.cpp
